--- a/src/custom.css
+++ b/src/custom.css
@@ -7,15 +7,33 @@
     background-color: #999;
 }
 
-.bulma-overlay-mixin {
-  @include overlay(1.5rem);
-  background-color: white;
-  border-radius: 0.25em;
-  color: black;
-  opacity: 0.67;
-  padding: .50em;
-  width: 30em;
-  height: 19.2em;
-  margin-left: auto;
-  margin-right: auto;
+
+@media screen and (max-width: 1279px) {
+  .bulma-overlay-mixin {
+    @include overlay(1.5rem);
+    background-color: white;
+    border-radius: 0.25em;
+    color: black;
+    opacity: 0.67;
+    padding: .50em;
+    width: 20em;
+    height: 25em;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .bulma-overlay-mixin {
+    @include overlay(1.5rem);
+    background-color: white;
+    border-radius: 0.25em;
+    color: black;
+    opacity: 0.67;
+    padding: .50em;
+    width: 30em;
+    height: 19.2em;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
